--- a/week1/Intro_to_PyTorch.ipynb
+++ b/week1/Intro_to_PyTorch.ipynb
@@ -545,14 +545,14 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.3675,  0.2242],\n",
-       "         [-0.3378, -1.0944]],\n",
+       "tensor([[[-1.1544,  1.6472],\n",
+       "         [ 0.9588, -0.2001]],\n",
        "\n",
-       "        [[ 1.5371,  0.7701],\n",
-       "         [-0.1490, -0.0928]],\n",
+       "        [[-0.4539, -1.5210],\n",
+       "         [ 1.6861,  2.2434]],\n",
        "\n",
-       "        [[ 0.3270,  0.4642],\n",
-       "         [ 0.1494,  0.1283]]])"
+       "        [[ 1.1520, -1.8479],\n",
+       "         [ 0.6796, -0.5945]]])"
       ]
      },
      "execution_count": 14,
@@ -590,8 +590,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.2235, -1.8912],\n",
-       "        [-1.2873,  0.7405]])"
+       "tensor([[-1.6375,  0.0349],\n",
+       "        [-0.4450,  0.7017]])"
       ]
      },
      "execution_count": 15,
@@ -1306,9 +1306,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:dl]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dl-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1320,7 +1320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
